# nba-polymarket

./: .gitignore  CLAUDE.md  Makefile  README.md  daily_commands.txt  docker-compose.yml  rebar.config
.claude/: current_task.md  decisions.md  known_issues.md  progress.md  settings.json
.github/workflows/: ci.yml
adapters/mock_publisher/: main.py  publisher.py  pyproject.toml  requirements.txt
adapters/mock_publisher/tests/: test_publisher.py
adapters/proto/: roundtrip.py
apps/core_bus/src/: core_bus.app.src  core_bus_app.erl  core_bus_sup.erl  event_bus.erl  game_state.erl  hello_nif.erl  ingest_subscriber.erl  inspect.erl  market_state.erl
apps/core_bus/test/: event_bus_prop.erl  hello_nif_SUITE.erl  ingest_subscriber_SUITE.erl  market_state_concurrent_SUITE.erl  market_state_prop.erl  proto_roundtrip_SUITE.erl
apps/execution/src/: execution.app.src  execution_app.erl  execution_sup.erl  kill_switch.erl  order_router.erl  paper_executor.erl  position_tracker.erl  rate_limiter.erl  risk_check.erl
apps/execution/test/: e2e_signal_to_fill_SUITE.erl  kill_switch_SUITE.erl  order_router_SUITE.erl  paper_executor_SUITE.erl  position_tracker_prop.erl  rate_limiter_SUITE.erl
apps/persistence/src/: persistence.app.src  persistence_app.erl  persistence_sup.erl
config/: sys.config
nifs/hello/: Cargo.toml  README.md
nifs/hello/src/: lib.rs
nifs/proto_codec/: Cargo.toml  build.rs
nifs/proto_codec/src/: lib.rs
proto/: buf.gen.erlang.yaml  buf.gen.python.yaml  buf.gen.rust.yaml  buf.yaml
proto/nba_polymarket/v1/: game.proto  (+4 more)
tools/: gpb_compile.escript
(+23 files in other folders)
