[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mock-publisher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyzmq>=26.0",
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
